--- a/forms/mapheaderform.ui
+++ b/forms/mapheaderform.ui
@@ -23,14 +23,14 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label_Song">
      <property name="text">
-      <string>Song</string>
+      <string>音乐</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="NoScrollComboBox" name="comboBox_Song">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The default background music for this map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;设置此地图的默认背景音乐&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="editable">
       <bool>true</bool>
@@ -43,14 +43,14 @@
    <item row="1" column="0">
     <widget class="QLabel" name="label_Location">
      <property name="text">
-      <string>Location</string>
+      <string>地点</string>
      </property>
     </widget>
    </item>
    <item row="1" column="1">
     <widget class="NoScrollComboBox" name="comboBox_Location">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The section of the region map which the map is grouped under. This also determines the name of the map that is displayed when the player enters it.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;地图在“地点”分组中所属的部分。同时也决定了玩家进入此地时屏幕上显示的名称。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="editable">
       <bool>true</bool>
@@ -63,14 +63,14 @@
    <item row="3" column="0">
     <widget class="QLabel" name="label_RequiresFlash">
      <property name="text">
-      <string>Requires Flash</string>
+      <string>需要闪光术</string>
      </property>
     </widget>
    </item>
    <item row="3" column="1">
     <widget class="QCheckBox" name="checkBox_RequiresFlash">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If checked, the player will need to use Flash to see fully on this map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;如果勾选，玩家在此地图上需要借助闪光术才能看清全貌。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="text">
       <string/>
@@ -80,14 +80,14 @@
    <item row="4" column="0">
     <widget class="QLabel" name="label_Weather">
      <property name="text">
-      <string>Weather</string>
+      <string>天气</string>
      </property>
     </widget>
    </item>
    <item row="4" column="1">
     <widget class="NoScrollComboBox" name="comboBox_Weather">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The default weather on this map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;此地图的默认天气。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="editable">
       <bool>true</bool>
@@ -100,14 +100,14 @@
    <item row="5" column="0">
     <widget class="QLabel" name="label_Type">
      <property name="text">
-      <string>Type</string>
+      <string>类型</string>
      </property>
     </widget>
    </item>
    <item row="5" column="1">
     <widget class="NoScrollComboBox" name="comboBox_Type">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The map type is a general attribute, which is used for many different things. For example, underground type maps will have a special transition effect when the player enters/exits the map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;地图类型是一个通用属性，用来决定游戏内的各种机制。例如，当地图类型设置为“地下”时，玩家在进入/离开该地图时会看到特殊的过渡效果。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="editable">
       <bool>true</bool>
@@ -120,14 +120,14 @@
    <item row="6" column="0">
     <widget class="QLabel" name="label_BattleScene">
      <property name="text">
-      <string>Battle Scene</string>
+      <string>战斗类型</string>
      </property>
     </widget>
    </item>
    <item row="6" column="1">
     <widget class="NoScrollComboBox" name="comboBox_BattleScene">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This field is used to help determine what graphics to use in the background of battles on this map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;此设置用于确定在此地图上战斗时背景所显示的图形。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="editable">
       <bool>true</bool>
@@ -140,14 +140,14 @@
    <item row="7" column="0">
     <widget class="QLabel" name="label_ShowLocationName">
      <property name="text">
-      <string>Show Location Name</string>
+      <string>显示地图名称</string>
      </property>
     </widget>
    </item>
    <item row="7" column="1">
     <widget class="QCheckBox" name="checkBox_ShowLocationName">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If checked, a map name popup will appear when the player enters this map. The name that appears on this popup depends on the Location field.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;如果勾选，玩家进入此地图时会显示名称。显示的名称取决于“地点”字段的设置。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="text">
       <string/>
@@ -157,14 +157,14 @@
    <item row="8" column="0">
     <widget class="QLabel" name="label_AllowRunning">
      <property name="text">
-      <string>Allow Running</string>
+      <string>允许奔跑</string>
      </property>
     </widget>
    </item>
    <item row="8" column="1">
     <widget class="QCheckBox" name="checkBox_AllowRunning">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If checked, the player will be allowed to run on this map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;如果勾选，玩家在此地图可以奔跑。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="text">
       <string/>
@@ -174,14 +174,14 @@
    <item row="9" column="0">
     <widget class="QLabel" name="label_AllowBiking">
      <property name="text">
-      <string>Allow Biking</string>
+      <string>允许骑车</string>
      </property>
     </widget>
    </item>
    <item row="9" column="1">
     <widget class="QCheckBox" name="checkBox_AllowBiking">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If checked, the player will be allowed to get on their bike on this map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;如果勾选，玩家在此地图可以骑自行车。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="text">
       <string/>
@@ -191,14 +191,14 @@
    <item row="10" column="0">
     <widget class="QLabel" name="label_AllowEscaping">
      <property name="text">
-      <string>Allow Dig &amp; Escape Rope</string>
+      <string>允许挖洞 &amp; 穿洞绳</string>
      </property>
     </widget>
    </item>
    <item row="10" column="1">
     <widget class="QCheckBox" name="checkBox_AllowEscaping">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If checked, the player will be allowed to use Dig or Escape Rope on this map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;如果勾选，玩家在此地图可以使用挖洞技能和穿洞绳。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="text">
       <string/>
@@ -208,28 +208,28 @@
    <item row="11" column="0">
     <widget class="QLabel" name="label_FloorNumber">
      <property name="text">
-      <string>Floor Number</string>
+      <string>楼层编号</string>
      </property>
     </widget>
    </item>
    <item row="11" column="1">
     <widget class="NoScrollSpinBox" name="spinBox_FloorNumber">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Floor number to be used for maps with elevators.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;用于带电梯地图的楼层编号。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label_LocationName">
      <property name="text">
-      <string>Location Name</string>
+      <string>地点名称</string>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
     <widget class="QLineEdit" name="lineEdit_LocationName">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The name that will be displayed in-game for this Location. This name will be shared with any other map that has the same Location.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;此地图在游戏内显示的名称。该名称将与所有归属此“地点”的地图共享。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </item>
