--- a/forms/newlayoutdialog.ui
+++ b/forms/newlayoutdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>New Layout Options</string>
+   <string>新布局设置</string>
   </property>
   <property name="sizeGripEnabled">
    <bool>true</bool>
@@ -66,7 +66,7 @@
        <item row="2" column="1">
         <widget class="QLineEdit" name="lineEdit_LayoutID">
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The constant that will be used to refer to this layout. It cannot be the same as any other existing layout.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;用于指向此布局的常量名称。该名称不能与任何其他现有布局相同。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="placeholderText">
           <string>LAYOUT_MY_NEW_LAYOUT</string>
@@ -79,21 +79,21 @@
        <item row="0" column="0">
         <widget class="QLabel" name="label_Name">
          <property name="text">
-          <string>Layout Name</string>
+          <string>布局名称</string>
          </property>
         </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_LayoutID">
          <property name="text">
-          <string>Layout ID</string>
+          <string>布局 ID</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QLineEdit" name="lineEdit_Name">
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The name of the new layout. The name cannot be the same as any other existing layout.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;新布局的名称。该名称不能与任何其他现有布局相同。 &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="placeholderText">
           <string>MyNewLayout</string>
