--- a/forms/colorinputwidget.ui
+++ b/forms/colorinputwidget.ui
@@ -56,21 +56,21 @@
          <item>
           <widget class="QLabel" name="label_Red">
            <property name="text">
-            <string>Red</string>
+            <string>红</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_Green">
            <property name="text">
-            <string>Green</string>
+            <string>绿</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_Blue">
            <property name="text">
-            <string>Blue</string>
+            <string>蓝</string>
            </property>
           </widget>
          </item>
