--- a/forms/gridsettingsdialog.ui
+++ b/forms/gridsettingsdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Grid Settings</string>
+   <string>网格设置</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -51,7 +51,7 @@
           </sizepolicy>
          </property>
          <property name="text">
-          <string>Color</string>
+          <string>颜色</string>
          </property>
         </widget>
        </item>
@@ -77,14 +77,14 @@
           </sizepolicy>
          </property>
          <property name="text">
-          <string>Style</string>
+          <string>样式</string>
          </property>
         </widget>
        </item>
        <item row="0" column="0" colspan="2">
         <widget class="QGroupBox" name="groupBox_Dimensions">
          <property name="title">
-          <string>Dimensions (in pixels)</string>
+          <string>尺寸（像素）</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_2" columnstretch="1,1,5">
           <item row="0" column="0" rowspan="2">
@@ -124,7 +124,7 @@
           <item row="1" column="1">
            <widget class="QLabel" name="label_Height">
             <property name="text">
-             <string>Height</string>
+             <string>高度</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
@@ -134,7 +134,7 @@
           <item row="0" column="1">
            <widget class="QLabel" name="label_Width">
             <property name="text">
-             <string>Width</string>
+             <string>宽度</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
@@ -157,7 +157,7 @@
        <item row="1" column="0" colspan="2">
         <widget class="QGroupBox" name="groupBox_Offset">
          <property name="title">
-          <string>Offset (in pixels)</string>
+          <string>偏移量（像素）</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_3" columnstretch="1,1,5">
           <item row="1" column="1">
