--- a/forms/newdefinedialog.ui
+++ b/forms/newdefinedialog.ui
@@ -32,7 +32,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label_Name">
         <property name="text">
-         <string>Name</string>
+         <string>名称</string>
         </property>
        </widget>
       </item>
@@ -62,7 +62,7 @@
       <item row="2" column="0">
        <widget class="QLabel" name="label_Value">
         <property name="text">
-         <string>Value</string>
+         <string>值</string>
         </property>
        </widget>
       </item>
