--- a/forms/newlayoutform.ui
+++ b/forms/newlayoutform.ui
@@ -21,7 +21,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox_MapDimensions">
      <property name="title">
-      <string>Map Dimensions</string>
+      <string>地图尺寸</string>
      </property>
      <layout class="QFormLayout" name="formLayout_7">
       <item row="0" column="0">
@@ -33,14 +33,14 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Width</string>
+         <string>宽度</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="NoScrollSpinBox" name="spinBox_MapWidth">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Width (in metatiles) of the new map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;新地图的宽度（以地图块为单位）&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="minimum">
          <number>1</number>
@@ -56,14 +56,14 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Height</string>
+         <string>高度</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="NoScrollSpinBox" name="spinBox_MapHeight">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Height (in metatiles) of the new map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;新地图的高度（以地图块为单位）&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="minimum">
          <number>1</number>
@@ -92,7 +92,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox_BorderDimensions">
      <property name="title">
-      <string>Border Dimensions</string>
+      <string>边缘尺寸</string>
      </property>
      <layout class="QFormLayout" name="formLayout_6">
       <item row="0" column="0">
@@ -104,14 +104,14 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Width</string>
+         <string>宽度</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="NoScrollSpinBox" name="spinBox_BorderWidth">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Width (in metatiles) of the new map's border.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;新地图边缘宽度（以地图块为单位）&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="minimum">
          <number>1</number>
@@ -121,7 +121,7 @@
       <item row="2" column="1">
        <widget class="NoScrollSpinBox" name="spinBox_BorderHeight">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Height (in metatiles) of the new map's border.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;新地图边缘高度（以地图块为单位）&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="minimum">
          <number>1</number>
@@ -137,7 +137,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Height</string>
+         <string>高度</string>
         </property>
        </widget>
       </item>
@@ -160,7 +160,7 @@
       <item row="0" column="1">
        <widget class="NoScrollComboBox" name="comboBox_PrimaryTileset">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The primary tileset for the new map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;新地图的主图块集。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="editable">
          <bool>true</bool>
@@ -196,7 +196,7 @@
       <item row="2" column="1">
        <widget class="NoScrollComboBox" name="comboBox_SecondaryTileset">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The secondary tileset for the new map.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;新地图的副图块集&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="editable">
          <bool>true</bool>
