--- a/forms/newmapgroupdialog.ui
+++ b/forms/newmapgroupdialog.ui
@@ -32,7 +32,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label_Name">
         <property name="text">
-         <string>Map Group Name</string>
+         <string>地图组名称</string>
         </property>
        </widget>
       </item>
