--- a/forms/resizelayoutpopup.ui
+++ b/forms/resizelayoutpopup.ui
@@ -29,7 +29,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Resize Layout</string>
+      <string>调整布局尺寸</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -92,7 +92,7 @@
       <item>
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Width</string>
+         <string>宽度</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -112,7 +112,7 @@
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Height</string>
+         <string>高度</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -182,7 +182,7 @@
       <item>
        <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>Border Width</string>
+         <string>边缘宽度</string>
         </property>
        </widget>
       </item>
@@ -199,7 +199,7 @@
       <item>
        <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>Border Height</string>
+         <string>边缘高度</string>
         </property>
        </widget>
       </item>
