--- a/forms/shortcutseditor.ui
+++ b/forms/shortcutseditor.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Shortcuts Editor</string>
+   <string>编辑快捷键</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
